# Acad-Mini-Assessment-Engine

./: .dockerignore  .gitignore  ASSUMPTIONS.md  CONTRIBUTING.md  Dockerfile  ERD.md  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
assessment_engine/: asgi.py  base_views.py  exceptions.py  mixins.py  permissions.py  responses.py  settings.py  urls.py  wsgi.py
assessment_engine/grading/: __init__.py  ai_grading.py  base.py  gemini_grading.py  mock_grading.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py
exams/: admin.py  models.py  serializers.py  urls.py  views.py
exams/migrations/: 0001_initial.py
submissions/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
submissions/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
